--- a/.github/workflows/make-epub.yml
+++ b/.github/workflows/make-epub.yml
@@ -35,25 +35,25 @@ jobs:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto zhoushu.epub gdrive:/Ancient-China-Books/周書.epub
+          args: copyto zhoushu.epub gdrive:/古籍共享电子书计划/周書.epub
       - name: Sync vst to Google drive
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto zhoushu-vst.epub gdrive:/Ancient-China-Books/周書-豎排.epub
+          args: copyto zhoushu-vst.epub gdrive:/古籍共享电子书计划/周書-豎排.epub
       - name: Sync to Freemdict
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto zhoushu.epub freemdict:/Ancient-China-Books/周書.epub
+          args: copyto zhoushu.epub freemdict:/古籍共享电子书计划/周書.epub
       - name: Sync vst to Freemdict
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto zhoushu-vst.epub freemdict:/Ancient-China-Books/周書-豎排.epub
+          args: copyto zhoushu-vst.epub freemdict:/古籍共享电子书计划/周書-豎排.epub
